@@ -26,6 +26,9 @@ Zope Changes
 
     Bugs Fixed
 
+      - Collector #1904: On Mac OS X avoid a spurious OSError when
+        zopectl exits.
+
       - CopySupport: Reverted workaround in '_verifyObjectPaste'.
         'checkPermission' now respects proxy roles, so the warkaround
         introduced to fix http://www.zope.org/Collectors/Zope/78 is no longer
